Closed Bug 1184689 Opened 9 years ago Closed 9 years ago

1,700 instances of "NS_ENSURE_TRUE(selcon) failed" and "NS_ENSURE_SUCCESS(res, nullptr) failed" emitted from editor/libeditor/nsEditor.cpp during linux64 debug testing

Categories

(Core :: DOM: Editor, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox42 --- affected
firefox43 --- fixed

People

(Reporter: erahm, Assigned: ehsan.akhgari)

References

(Blocks 1 open bug)

Details

+++ This bug was initially created as a clone of Bug #572618 +++

These warnings are chained:

> 830 [NNNNN] WARNING: NS_ENSURE_TRUE(selcon) failed: file editor/libeditor/nsEditor.cpp, line 658
> 830 [NNNNN] WARNING: NS_ENSURE_SUCCESS(res, nullptr) failed with result 0xC1F30001: file editor/libeditor/nsEditor.cpp, line 667

This warnings [1,2], introduced in bug 572618, show up in the following test suites:

> mozilla-central_ubuntu64_vm-debug_test-mochitest-4-bm54-tests1-linux64-build4.txt:162
> mozilla-central_ubuntu64_vm-debug_test-crashtest-bm54-tests1-linux64-build7.txt:132
> mozilla-central_ubuntu64_vm-debug_test-mochitest-e10s-4-bm115-tests1-linux64-build34.txt:116
> mozilla-central_ubuntu64_vm-debug_test-mochitest-5-bm117-tests1-linux64-build5.txt:78
> mozilla-central_ubuntu64_vm-debug_test-reftest-e10s-2-bm120-tests1-linux64-build0.txt:59
> mozilla-central_ubuntu64_vm-debug_test-reftest-4-bm122-tests1-linux64-build20.txt:57
> mozilla-central_ubuntu64_vm-debug_test-mochitest-other-bm52-tests1-linux64-build8.txt:56
> mozilla-central_ubuntu64_vm-debug_test-reftest-e10s-1-bm120-tests1-linux64-build1.txt:33
> mozilla-central_ubuntu64_vm-debug_test-reftest-2-bm117-tests1-linux64-build12.txt:30
> mozilla-central_ubuntu64_vm-debug_test-mochitest-1-bm54-tests1-linux64-build0.txt:24
> mozilla-central_ubuntu64_vm-debug_test-mochitest-e10s-2-bm113-tests1-linux64-build0.txt:21
> mozilla-central_ubuntu64_vm-debug_test-mochitest-2-bm51-tests1-linux64-build9.txt:21
> mozilla-central_ubuntu64_vm-debug_test-mochitest-e10s-5-bm117-tests1-linux64-build17.txt:11
> mozilla-central_ubuntu64_vm-debug_test-mochitest-e10s-1-bm122-tests1-linux64-build8.txt:10
> mozilla-central_ubuntu64_vm-debug_test-mochitest-browser-chrome-1-bm51-tests1-linux64-build6.txt:5
> mozilla-central_ubuntu64_vm-debug_test-mochitest-e10s-browser-chrome-1-bm122-tests1-linux64-build7.txt:4
> mozilla-central_ubuntu64_vm-debug_test-reftest-1-bm116-tests1-linux64-build43.txt:3
> mozilla-central_ubuntu64_vm-debug_test-mochitest-e10s-browser-chrome-2-bm54-tests1-linux64-build15.txt:3
> mozilla-central_ubuntu64_vm-debug_test-mochitest-browser-chrome-2-bm118-tests1-linux64-build16.txt:3
> mozilla-central_ubuntu64_vm-debug_test-reftest-3-bm54-tests1-linux64-build16.txt:2

It shows up in 211 tests. A few of the most prevalent:

> 67 - layout/base/tests/test_reftests_with_caret.html
> 49 - editor/libeditor/tests/test_bug620906.html
> 37 - editor/libeditor/tests/test_bug578771.html
> 28 - file:///builds/slave/test/build/tests/reftest/tests/editor/libeditor/crashtests/766845.xhtml
> 25 - file:///builds/slave/test/build/tests/reftest/tests/gfx/tests/crashtests/358732-3.html
> 22 - dom/html/test/test_bug446483.html
> 15 - file:///builds/slave/test/build/tests/reftest/tests/editor/reftests/spellcheck-contenteditable-property-dynamic-override-inherit.html
> 15 - file:///builds/slave/test/build/tests/reftest/tests/editor/reftests/1088158.html
> 15 - editor/libeditor/tests/test_bug596506.html
> 14 - editor/libeditor/tests/test_spellcheck_pref.html

[1] https://hg.mozilla.org/mozilla-central/annotate/49683d4e9ebd/editor/libeditor/nsEditor.cpp#l658
[2] https://hg.mozilla.org/mozilla-central/annotate/49683d4e9ebd/editor/libeditor/nsEditor.cpp#l667
Assignee: nobody → ehsan
https://hg.mozilla.org/mozilla-central/rev/9ad5edf26278
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.