Bug 1184689 - Remove two spammy editor warnings